--- a/src/pages/signup/signup.html
+++ b/src/pages/signup/signup.html
@@ -4,17 +4,17 @@
   </ion-navbar>
 </ion-header>
 <ion-content padding>
-
-  <form (ngSubmit)="signupUser(); $event.preventDefault()">
+  <form [formGroup]="formGroup" (ngSubmit)="signupUser(); $event.preventDefault()">
     <ion-item>
       <ion-label stacked>Nome*</ion-label>
-      <ion-input name="name" type="text"></ion-input>
+      <ion-input formControlName="nome" type="text"></ion-input>
     </ion-item>
     <ion-item>
       <ion-label stacked>Email*</ion-label>
-      <ion-input name="email" type="text"></ion-input>
+      <ion-input formControlName="email" type="text"></ion-input>
     </ion-item>
-    <ion-list radio-group name="tipo">
+
+    <ion-list radio-group formControlName="tipo">
       <ion-list-header>
         Tipo de Cliente
       </ion-list-header>
@@ -27,56 +27,59 @@
         <ion-radio value="2"></ion-radio>
       </ion-item>
     </ion-list>
+
     <ion-item>
-      <ion-label stacked>CPF ou CNPJ</ion-label>
-      <ion-input name="cpfOuCnpj" value="text"></ion-input>
+      <ion-label stacked>CPF ou CNPJ*</ion-label>
+      <ion-input formControlName="cpfOuCnpj" type="text"></ion-input>
     </ion-item>
     <ion-item>
       <ion-label stacked>Senha*</ion-label>
-      <ion-input name="senha" value="password"></ion-input>
+      <ion-input formControlName="senha" type="password"></ion-input>
     </ion-item>
     <ion-item>
       <ion-label stacked>Logradouro*</ion-label>
-      <ion-input name="logradouro" value="text"></ion-input>
+      <ion-input formControlName="logradouro" type="text"></ion-input>
     </ion-item>
     <ion-item>
       <ion-label stacked>Numero*</ion-label>
-      <ion-input name="numero" value="text"></ion-input>
+      <ion-input formControlName="numero" type="text"></ion-input>
     </ion-item>
     <ion-item>
       <ion-label stacked>Complemento</ion-label>
-      <ion-input name="complemento" value="text"></ion-input>
+      <ion-input formControlName="complemento" type="text"></ion-input>
     </ion-item>
     <ion-item>
       <ion-label stacked>Bairro</ion-label>
-      <ion-input name="bairro" value="text"></ion-input>
+      <ion-input formControlName="bairro" type="text"></ion-input>
     </ion-item>
     <ion-item>
       <ion-label stacked>CEP</ion-label>
-      <ion-input name="cep" value="text"></ion-input>
+      <ion-input formControlName="cep" type="text"></ion-input>
     </ion-item>
     <ion-item>
       <ion-label stacked>Telefone 1*</ion-label>
-      <ion-input name="telefone1" value="text"></ion-input>
+      <ion-input formControlName="telefone1" type="text"></ion-input>
     </ion-item>
     <ion-item>
       <ion-label stacked>telefone 2</ion-label>
-      <ion-input name="telefone2" value="text"></ion-input>
+      <ion-input formControlName="telefone2" type="text"></ion-input>
     </ion-item>
     <ion-item>
       <ion-label stacked>Telefone 3</ion-label>
-      <ion-input name="telefone3" value="text"></ion-input>
+      <ion-input formControlName="telefone3" type="text"></ion-input>
     </ion-item>
+    
+    
     <ion-item>
       <ion-label stacked>Estado*</ion-label>
-      <ion-select name="estadoId" (ionChange)="updateCidades()">
+      <ion-select formControlName="estadoId" (ionChange)="updateCidades()">
         <ion-option value="1">Minas Gerais</ion-option>
         <ion-option value="2">São Paulo</ion-option>
       </ion-select>
     </ion-item>
     <ion-item>
       <ion-label stacked>Cidade*</ion-label>
-      <ion-select name="cidadeId">
+      <ion-select formControlName="cidadeId">
         <ion-option value="1">Uberlândia</ion-option>
         <ion-option value="2">Campinas</ion-option>
       </ion-select>
