Salvando novo cliente

--- a/src/pages/signup/signup.html
+++ b/src/pages/signup/signup.html
@@ -32,9 +32,9 @@
 
     <ion-item>
       <ion-label stacked>CPF ou CNPJ*</ion-label>
-      <ion-input formControlName="cpfOuCnpj" type="text"></ion-input>
+      <ion-input formControlName="cpfouCnpj" type="text"></ion-input>
     </ion-item>
-    <p class="danger" *ngIf="formGroup.controls.cpfOuCnpj.dirty && formGroup.controls.cpfOuCnpj.errors" margin-left>Valor Inválido</p>
+    <p class="danger" *ngIf="formGroup.controls.cpfouCnpj.dirty && formGroup.controls.cpfouCnpj.errors" margin-left>Valor Inválido</p>
     <ion-item>
       <ion-label stacked>Senha*</ion-label>
       <ion-input formControlName="senha" type="password"></ion-input>
