Criando página de detalhes do produto

--- a/src/pages/produtos/produtos.html
+++ b/src/pages/produtos/produtos.html
@@ -9,12 +9,14 @@
 
 <ion-content padding>
   <ion-list>
-    <button ion-item *ngFor="let item of items">
+    <button ion-item *ngFor="let item of items" (click)="showDetail()"> 
       <ion-thumbnail item-start>
-        <img [src]="item.imageUrl || 'assets/imgs/prod.jpg'">
+        <img [src]="item?.imageUrl || 'assets/imgs/prod.jpg'">
       </ion-thumbnail>
-      <h2>{{item.nome}}</h2>
-      <p>{{item.preco | currency}}</p>
+      <h2>{{item?.nome}}</h2>
+      <p>
+        {{item?.preco}}
+      </p>
     </button>
   </ion-list>
 
