Criando página de carrinho de compras

--- a/src/pages/produto-detail/produto-detail.html
+++ b/src/pages/produto-detail/produto-detail.html
@@ -20,6 +20,6 @@
   </ion-card-content>
 </ion-card>
 
-<button ion-button block online> Adicionar ao Carrinho</button>
+<button ion-button block online (click)="addToCart(item)"> Adicionar ao Carrinho</button>
 
 </ion-content>
