--- a/src/pages/cart/cart.html
+++ b/src/pages/cart/cart.html
@@ -22,11 +22,12 @@
   </ion-item>
   <ion-item *ngIf="total() > 0">
     <h1>Total</h1>
-    <h1 item-end>{{total()}}</h1>
+    <h1 item-end>{{total() | currency}}</h1>
   </ion-item>
   <ion-item *ngIf="total() <= 0">
     <h1>Seu carrinho esta vázio!!</h1>
   </ion-item>
   <button ion-button block (click)="getOn()">Continuar Comprando</button>
+  <button ion-button block color="secondary" (click)="checkout()">Finalizar Pedido</button>
 </ion-list>
 </ion-content>
