Buscando endereços do banco de dados

--- a/src/pages/pick-address/pick-address.html
+++ b/src/pages/pick-address/pick-address.html
@@ -10,7 +10,7 @@
 <ion-content padding>
  <ion-list>
    <ion-list-header>
-     Selecione Um Endereço
+     Selecione um Endereço
    </ion-list-header>
     <button ion-item *ngFor="let item of items"> 
       <h2>{{item.logradouro}}, {{item.numero}}</h2>
