--- a/src/pages/cart/cart.html
+++ b/src/pages/cart/cart.html
@@ -20,7 +20,7 @@
     <ion-icon class="nolinebreak" name="add-circle" color="primary" (click)="increaseQuantity(item.produto)"></ion-icon>
     <ion-icon class="nolinebreak" name="trash" item-end color="danger" (click)="removeItem(item.produto)"></ion-icon>
   </ion-item>
-  <ion-item *ngIf="total() > 0">
+  <ion-item *ngIf="total()>0">
     <h1>Total</h1>
     <h1 item-end>{{total() | currency}}</h1>
   </ion-item>
@@ -28,6 +28,6 @@
     <h1>Seu carrinho esta vázio!!</h1>
   </ion-item>
   <button ion-button block (click)="getOn()">Continuar Comprando</button>
-  <button ion-button block color="secondary" (click)="checkout()">Finalizar Pedido</button>
+  <button *ngIf="total()>0" ion-button block color="secondary" (click)="checkout()">Finalizar Pedido</button>
 </ion-list>
 </ion-content>
