--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -10,10 +10,28 @@
 </ion-header>
 
 <ion-content padding>
- <ion-avatar>
-   <img class="circle" [src]="cliente?.imageUrl || 'assets/imgs/avatar-blank.png'">
- </ion-avatar>
- <h2 text-center> {{cliente?.nome}}</h2>
- <p text-center>{{cliente?.email}}</p>
+  <div>
+  <ion-avatar>
+    <img class="circle" [src]="cliente?.imageUrl || 'assets/imgs/avatar-blank.png'"/>
+  </ion-avatar>
+  <h2 text-center> {{cliente?.nome}}</h2>
+  <p text-center>{{cliente?.email}}</p>
+</div>
+
+<ion-card>
+   <ion-card-header>
+     Enviar Imagem Perfil
+  </ion-card-header>
+     <ion-item *ngIf="picture">
+       <img [src]="picture">
+     </ion-item>
+     <ion-item>
+       <button ion-button block (click)="getCameraPicture()" [disabled]="cameraOn">Camera</button>
+     </ion-item>
+ </ion-card>
 
 </ion-content>
+ 
+ 
+
+
