--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -27,6 +27,8 @@
      </ion-item>
      <ion-item>
        <button ion-button block (click)="getCameraPicture()" [disabled]="cameraOn">Camera</button>
+       <button *ngIf="picture" ion-button block (click)="sendPicture()">Enviar Imagem</button>
+       <button *ngIf="picture" ion-button block (click)="cancel()">Descartar Imagem</button>
      </ion-item>
  </ion-card>
 
